[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/posiciones_header.png" type="Texture" id=2]
[ext_resource path="res://assets/posiciones_body.png" type="Texture" id=3]
[ext_resource path="res://scripts/Posiciones.gd" type="Script" id=4]
[ext_resource path="res://assets/pixel_lowercase.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/PixelEmulator-xq08.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 6 )

[node name="Posiciones" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 82.0
margin_top = 38.0
margin_right = -80.0
margin_bottom = -34.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Header" type="TextureRect" parent="VBoxContainer"]
margin_right = 478.0
margin_bottom = 32.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="VBoxContainer/Header"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -239.5
margin_right = 239.5
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.00392157, 0, 0.635294, 1 )
text = "POSICIONES"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="TextureRect" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 478.0
margin_bottom = 328.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="VBoxContainer/Body"]
margin_left = 14.0
margin_top = 14.0
margin_right = 40.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.254902, 0.215686, 0.219608, 1 )
text = "1-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtScore" type="LineEdit" parent="VBoxContainer/Body"]
modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_left = 46.0
margin_top = 14.0
margin_right = 164.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
max_length = 315
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtNombre" type="LineEdit" parent="VBoxContainer/Body"]
modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_left = 174.0
margin_top = 14.0
margin_right = 454.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )

[node name="VBoxScore" type="VBoxContainer" parent="VBoxContainer/Body"]
margin_left = 14.0
margin_top = 42.0
margin_right = 470.0
margin_bottom = 290.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="VBoxContainer/Body/VBoxScore"]
margin_right = 456.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.254902, 0.215686, 0.219608, 1 )
text = "2- 1234 irwin rodriguez"
uppercase = true

[node name="Score3" type="Label" parent="VBoxContainer/Body/VBoxScore"]
margin_top = 28.0
margin_right = 456.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.254902, 0.215686, 0.219608, 1 )
text = "3- 1234 irwin rodriguez"
uppercase = true

[node name="Score4" type="Label" parent="VBoxContainer/Body/VBoxScore"]
margin_top = 56.0
margin_right = 456.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.254902, 0.215686, 0.219608, 1 )
text = "4- 1234 irwin rodriguez"
uppercase = true

[node name="Score5" type="Label" parent="VBoxContainer/Body/VBoxScore"]
margin_top = 84.0
margin_right = 456.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.254902, 0.215686, 0.219608, 1 )
text = "5- 1234 irwin rodriguez"
uppercase = true

[node name="Score6" type="Label" parent="VBoxContainer/Body/VBoxScore"]
margin_top = 112.0
margin_right = 456.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.254902, 0.215686, 0.219608, 1 )
text = "6- 1234 irwin rodriguez"
uppercase = true

[node name="Score7" type="Label" parent="VBoxContainer/Body/VBoxScore"]
margin_top = 140.0
margin_right = 456.0
margin_bottom = 164.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.254902, 0.215686, 0.219608, 1 )
text = "7- 1234 irwin rodriguez"
uppercase = true

[node name="Score8" type="Label" parent="VBoxContainer/Body/VBoxScore"]
margin_top = 168.0
margin_right = 456.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.254902, 0.215686, 0.219608, 1 )
text = "8- 1234 irwin rodriguez"
uppercase = true

[node name="Score9" type="Label" parent="VBoxContainer/Body/VBoxScore"]
margin_top = 196.0
margin_right = 456.0
margin_bottom = 220.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.254902, 0.215686, 0.219608, 1 )
text = "9- 1234 irwin rodriguez"
uppercase = true

[node name="Score10" type="Label" parent="VBoxContainer/Body/VBoxScore"]
margin_top = 224.0
margin_right = 456.0
margin_bottom = 248.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.254902, 0.215686, 0.219608, 1 )
text = "10-1234 irwin rodriguez"
uppercase = true
[connection signal="text_entered" from="VBoxContainer/Body/txtNombre" to="." method="_on_txtNombre_text_entered"]
